--- a/index.html
+++ b/index.html
@@ -1,153 +1,176 @@
-// Class for handling audio files
-class AudioFileManager {
-  constructor() {
-    this.audioFiles = [];
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Audio File Manager App</title>
+  <!-- Add any necessary stylesheets or external dependencies here -->
+</head>
+<body>
+  <h1>Audio File Manager App</h1>
 
-  upload(file) {
-    return new Promise((resolve, reject) => {
-      // Implement logic to handle the audio file upload
-      // You can use advanced techniques like async/await and file processing libraries
+  <script>
+    // Class for handling audio files
+    class AudioFileManager {
+      constructor() {
+        this.audioFiles = [];
+      }
 
-      // For this example, we will simulate an asynchronous upload and resolve with a file object
-      setTimeout(() => {
-        const uploadedFile = {
-          id: Date.now(), // Generate a unique ID for the file
-          name: file.name,
-          url: 'https://example.com/uploads/' + file.name, // Replace with the actual URL of the uploaded file
-          collaborationRequests: [], // Array to store collaboration requests for this audio file
-        };
+      async upload(file) {
+        const uploadedFile = await this.simulateFileUpload(file);
         this.audioFiles.push(uploadedFile);
-        resolve(uploadedFile);
-      }, 2000); // Simulate a 2-second upload delay
-    });
-  }
+        return uploadedFile;
+      }
 
-  delete(fileId) {
-    return new Promise((resolve, reject) => {
-      // Implement logic to delete the audio file
-      // You can use advanced techniques to remove the file from the server or cloud storage
+      simulateFileUpload(file) {
+        return new Promise((resolve) => {
+          setTimeout(() => {
+            const uploadedFile = {
+              id: Date.now(),
+              name: file.name,
+              url: `https://example.com/uploads/${file.name}`,
+              collaborationRequests: [],
+            };
+            resolve(uploadedFile);
+          }, 2000);
+        });
+      }
 
-      // For this example, we will simulate an asynchronous deletion and resolve with a success message
-      setTimeout(() => {
+      async delete(fileId) {
         const index = this.audioFiles.findIndex(file => file.id === fileId);
-        if (index !== -1) {
-          this.audioFiles.splice(index, 1);
-          resolve('File deleted successfully');
-        } else {
-          reject('File not found');
+        if (index === -1) {
+          throw new Error('File not found');
         }
-      }, 1000); // Simulate a 1-second deletion delay
-    });
-  }
 
-  getAll() {
-    return this.audioFiles;
-  }
+        await this.simulateFileDeletion();
 
-  sortCollaborationRequestsByRequestCount() {
-    this.audioFiles.forEach(file => {
-      file.collaborationRequests.sort((a, b) => b.requestCount - a.requestCount);
-    });
-  }
-}
-
-// Class for handling collaboration requests
-class CollaborationManager {
-  constructor() {
-    this.dailyMessageLimit = 10;
-    this.paidSubscriber = false;
-  }
-
-  canSendMessage() {
-    if (this.paidSubscriber) {
-      return true; // Unlimited messaging for paid subscribers
-    } else {
-      return this.dailyMessageLimit > 0; // Check remaining daily message limit
-    }
-  }
-
-  sendMessage(fileId, creatorId, message) {
-    return new Promise((resolve, reject) => {
-      if (this.canSendMessage()) {
-        // Implement logic to send a collaboration request to the creator
-        // You can use advanced techniques like WebSocket for real-time communication
-
-        // For this example, we will simulate an asynchronous request and resolve with a success message
-        setTimeout(() => {
-          if (!this.paidSubscriber) {
-            this.dailyMessageLimit--; // Deduct from the daily message limit for free users
-          }
-          const timestamp = Date.now();
-          const collaborationRequest = {
-            creatorId,
-            message,
-            timestamp,
-          };
-          const file = audioFileManager.getAll().find(file => file.id === fileId);
-          if (file) {
-            file.collaborationRequests.push(collaborationRequest);
-            collaborationRequest.requestCount = file.collaborationRequests.length;
-          }
-          resolve('Collaboration request sent successfully');
-        }, 1000); // Simulate a 1-second request delay
-      } else {
-        reject('Daily message limit exceeded');
+        const deletedFile = this.audioFiles.splice(index, 1)[0];
+        return `File '${deletedFile.name}' deleted successfully`;
       }
-    });
-  }
 
-  subscribe() {
-    return new Promise((resolve, reject) => {
-      // Implement logic to subscribe the user and unlock unlimited messaging
-      // You can use advanced techniques like payment gateways and user management systems
+      simulateFileDeletion() {
+        return new Promise((resolve) => {
+          setTimeout(() => {
+            resolve();
+          }, 1000);
+        });
+      }
 
-      // For this example, we will simulate an asynchronous subscription and resolve with a success message
-      setTimeout(() => {
+      getAll() {
+        return this.audioFiles;
+      }
+
+      sortCollaborationRequestsByRequestCount() {
+        this.audioFiles.forEach(file => {
+          file.collaborationRequests.sort((a, b) => b.requestCount - a.requestCount);
+        });
+      }
+    }
+
+    // Class for handling collaboration requests
+    class CollaborationManager {
+      constructor() {
+        this.dailyMessageLimit = 10;
+        this.paidSubscriber = false;
+      }
+
+      canSendMessage() {
+        return this.paidSubscriber || this.dailyMessageLimit > 0;
+      }
+
+      async sendMessage(fileId, creatorId, message) {
+        if (!this.canSendMessage()) {
+          throw new Error('Daily message limit exceeded');
+        }
+
+        const file = audioFileManager.getAll().find(file => file.id === fileId);
+        if (!file) {
+          throw new Error('File not found');
+        }
+
+        await this.simulateRequestSending();
+
+        const timestamp = Date.now();
+        const collaborationRequest = {
+          creatorId,
+          message,
+          timestamp,
+        };
+
+        file.collaborationRequests.push(collaborationRequest);
+        collaborationRequest.requestCount = file.collaborationRequests.length;
+
+        return 'Collaboration request sent successfully';
+      }
+
+      simulateRequestSending() {
+        return new Promise((resolve) => {
+          setTimeout(() => {
+            if (!this.paidSubscriber) {
+              this.dailyMessageLimit--;
+            }
+            resolve();
+          }, 1000);
+        });
+      }
+
+      async subscribe() {
+        await this.simulateSubscription();
         this.paidSubscriber = true;
-        resolve('Subscription successful. You now have unlimited messaging.');
-      }, 2000); // Simulate a 2-second subscription process
-    });
-  }
-}
+        return 'Subscription successful. You now have unlimited messaging.';
+      }
 
-// Usage example
-(async () => {
-  const audioFileManager = new AudioFileManager();
-  const collaborationManager = new CollaborationManager();
-
-  try {
-    // Upload an audio file
-    const file = /* your file object */;
-    const uploadedFile = await audioFileManager.upload(file);
-    console.log('File uploaded:', uploadedFile);
-    const allAudioFiles = audioFileManager.getAll();
-    console.log('All audio files:', allAudioFiles);
-
-    // Delete an audio file
-    const fileId = /* your file ID */;
-    const deletionMessage = await audioFileManager.delete(fileId);
-    console.log('Deletion:', deletionMessage);
-    const remainingAudioFiles = audioFileManager.getAll();
-    console.log('Remaining audio files:', remainingAudioFiles);
-
-    // Send collaboration requests
-    for (let i = 0; i < 15; i++) {
-      try {
-        await collaborationManager.sendMessage(fileId, creatorId, message);
-        console.log(`Collaboration request ${i + 1} sent successfully.`);
-      } catch (error) {
-        console.error(`Collaboration request ${i + 1} error:`, error);
-        if (error === 'Daily message limit exceeded') {
-          break;
-        }
+      simulateSubscription() {
+        return new Promise((resolve) => {
+          setTimeout(() => {
+            resolve();
+          }, 2000);
+        });
       }
     }
 
-    // Subscribe to unlock unlimited messaging
-    const subscriptionMessage = await collaborationManager.subscribe();
-    console.log(subscriptionMessage);
+    // Usage example
+    (async () => {
+      const audioFileManager = new AudioFileManager();
+      const collaborationManager = new CollaborationManager();
 
-   
+      try {
+        // Upload an audio file
+        const file = { name: 'example.mp3' };
+        const uploadedFile = await audioFileManager.upload(file);
+        console.log('File uploaded:', uploadedFile);
+        const allAudioFiles = audioFileManager.getAll();
+        console.log('All audio files:', allAudioFiles);
 
+        // Delete an audio file
+        const fileId = uploadedFile.id;
+        const deletionMessage = await audioFileManager.delete(fileId);
+        console.log('Deletion:', deletionMessage);
+        const remainingAudioFiles = audioFileManager.getAll();
+        console.log('Remaining audio files:', remainingAudioFiles);
 
+        // Send collaboration requests
+        for (let i = 0; i < 15; i++) {
+          try {
+            const creatorId = 'user123';
+            const message = `Collaboration request ${i + 1}`;
+            await collaborationManager.sendMessage(fileId, creatorId, message);
+            console.log(`Collaboration request ${i + 1} sent successfully.`);
+          } catch (error) {
+            console.error(`Collaboration request ${i + 1} error:`, error);
+            if (error.message === 'Daily message limit exceeded') {
+              break;
+            }
+          }
+        }
+
+        // Subscribe to unlock unlimited messaging
+        const subscriptionMessage = await collaborationManager.subscribe();
+        console.log(subscriptionMessage);
+      } catch (error) {
+        console.error('Error:', error);
+      }
+    })();
+  </script>
+</body>
+</html>
